--- a/index.html
+++ b/index.html
@@ -345,6 +345,6 @@
     <!-- Error Message -->
     <div id="error-message" class="error-message hidden"></div>
 
-    <script src="script.js?v=20260115_v2"></script>
+    <script src="script.js?v=v_final_test"></script>
 </body>
 </html>
